Fix collapsible state usage, collapse btnn in edit mode

--- a/src/ui/styles/variables.scss
+++ b/src/ui/styles/variables.scss
@@ -74,7 +74,7 @@ $monospaceFontFamily: 'Consolas', 'Menlo', 'Ubuntu Mono', monospace;
         --dl-filter-ymap-heatmap: none;
         --dl-color-ymap-background: #fafafa;
         --dl-filter-zoom-control: none;
-        --dl-color-fixed-header-background: var(--g-color-private-cool-grey-100-solid);
+        --dl-color-fixed-header-background: var(--g-color-private-cool-grey-150-solid);
     }
 
     &_theme_dark {
